--- a/EcommerceFullStackProject/.env.example
+++ b/EcommerceFullStackProject/.env.example
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/ecommerce
+MONGO_URI="mongodb://127.0.0.1:27017/ecommerce" node scripts/updateProductImages.js
 SESSION_SECRET=MySuperSecret_123456789987654321
 
