--- a/EcommerceFullStackProject/.env.example
+++ b/EcommerceFullStackProject/.env.example
@@ -1,3 +1,4 @@
-MONGO_URI="mongodb://127.0.0.1:27017/ecommerce" node scripts/updateProductImages.js
-SESSION_SECRET=MySuperSecret_123456789987654321
+# Example environment variables (DO NOT put real secrets here)
 
+MONGO_URI=mongodb://localhost:27017/ecommerce_db
+SESSION_SECRET=replace_with_random_secret
