Update UI, admin panel, ratings, and animations

--- a/EcommerceFullStackProject/.env.example
+++ b/EcommerceFullStackProject/.env.example
@@ -1,4 +1,11 @@
 # Example environment variables (DO NOT put real secrets here)
 
 MONGO_URI=mongodb://localhost:27017/ecommerce_db
+MONGO_DB=ecommerce_db
 SESSION_SECRET=replace_with_random_secret
+AI_SERVICE_URL=http://127.0.0.1:8002
+AI_LLM_PROVIDER=openai
+OPENAI_API_KEY=replace_with_real_key
+AI_OPENAI_MODEL=gpt-4o-mini
+AI_OLLAMA_URL=http://127.0.0.1:11434
+AI_OLLAMA_MODEL=qwen2.5:0.5b
