Polish UI, harden auth, and prep deployment

--- a/EcommerceFullStackProject/.env.example
+++ b/EcommerceFullStackProject/.env.example
@@ -4,8 +4,18 @@ MONGO_URI=mongodb://localhost:27017/ecommerce_db
 MONGO_DB=ecommerce_db
 SESSION_SECRET=replace_with_random_secret
 AI_SERVICE_URL=http://127.0.0.1:8002
-AI_LLM_PROVIDER=openai
+AI_LLM_PROVIDER=gemini
 OPENAI_API_KEY=replace_with_real_key
 AI_OPENAI_MODEL=gpt-4o-mini
+GEMINI_API_KEY=replace_with_real_key
+AI_GEMINI_MODEL=gemini-1.5-flash
 AI_OLLAMA_URL=http://127.0.0.1:11434
 AI_OLLAMA_MODEL=qwen2.5:0.5b
+OTP_EXPIRES_MIN=10
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+SMTP_FROM=your_email@gmail.com
+DEMO_PAYMENT_AUTO_CAPTURE=1
+DEMO_WEBHOOK_SECRET=replace_with_random_webhook_secret
