--- a/EcommerceFullStackProject/package.json
+++ b/EcommerceFullStackProject/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.8.1",
     "connect-mongo": "^6.0.0",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "ejs": "~2.6.1",
@@ -25,6 +26,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^9.0.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.10.1",
     "pug": "^3.0.3",
     "zod": "^4.3.6"
   },
